--- a/PlugHub/PlugHub.csproj
+++ b/PlugHub/PlugHub.csproj
@@ -42,4 +42,8 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />  
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PlugHub.Shared\PlugHub.Shared.csproj" />
+  </ItemGroup>
 </Project>
