✨ Implemented initial plugin system (#51)
resolves #40
resolves #39
resolves #38
resolves #33

--- a/PlugHub.UnitTests/PlugHub.UnitTests.csproj
+++ b/PlugHub.UnitTests/PlugHub.UnitTests.csproj
@@ -15,6 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PlugHub.Plugins\PlugHub.Shared.Mock\PlugHub.Shared.Mock.csproj" />
     <ProjectReference Include="..\PlugHub\PlugHub.csproj" />
     <ProjectReference Include="..\PlugHub.Shared\PlugHub.Shared.csproj" />
   </ItemGroup>
