--- a/PlugHub.Plugins/PlugHub.Plugin.Mock/PlugHub.Plugin.Mock.csproj
+++ b/PlugHub.Plugins/PlugHub.Plugin.Mock/PlugHub.Plugin.Mock.csproj
@@ -1,26 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <LangVersion>latest</LangVersion>    
+    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RuntimeIdentifiers>win-x64;linux-x64;osx-x64</RuntimeIdentifiers>
     <AvaloniaUseCompiledBindingsByDefault>false</AvaloniaUseCompiledBindingsByDefault>
   </PropertyGroup>
-  
-  <ItemGroup>
-    <AvaloniaResource Include="Assets\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <AdditionalFiles SourceItemGroup="AvaloniaXaml" Include="**/*.xaml" />
-    <AvaloniaResource Include="**/*.xaml" />
-  </ItemGroup>
 
   <ItemGroup>
     <!--Avalonia-->
     <PackageReference Include="Avalonia" Version="11.3.2" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.2" />
-    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.2" />   
+    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.2" />
     <!--Avalonia Extras-->
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="FluentAvaloniaUI" Version="2.4.0" />
@@ -40,10 +32,12 @@
     <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.2" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
-    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />  
+    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+  </ItemGroup>  
+  
+  <ItemGroup>
+    <ProjectReference Include="..\..\PlugHub.Shared\PlugHub.Shared.csproj" />
+    <ProjectReference Include="..\PlugHub.Shared.Mock\PlugHub.Shared.Mock.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\PlugHub.Shared\PlugHub.Shared.csproj" />
-  </ItemGroup>
 </Project>
