✨ Added initial UI integration and plugin manager (#77)
resolves #69
resolves #70
resolves #71
resolves #72

--- a/PlugHub.Plugins/PlugHub.Plugin.Mock/PlugHub.Plugin.Mock.csproj
+++ b/PlugHub.Plugins/PlugHub.Plugin.Mock/PlugHub.Plugin.Mock.csproj
@@ -33,7 +33,11 @@
     <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.2" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
-  </ItemGroup>  
+  </ItemGroup>
+
+  <ItemGroup>
+    <AvaloniaResource Include="Assets\ic_fluent_chat_24_regular.png" />
+  </ItemGroup>
  
   <ItemGroup>
     <ProjectReference Include="..\..\PlugHub.Shared\PlugHub.Shared.csproj" />
