🧼 Removed Linked Issues sections (#86)
resolves #85

--- a/.github/ISSUE_TEMPLATE/report-bug.yml
+++ b/.github/ISSUE_TEMPLATE/report-bug.yml
@@ -1,6 +1,6 @@
 name: Bug Report
 description: Create a report to help us improve PlugHub
-title: "<short summary of your identified issue>"
+title: "<short title for your identified issue>"
 type: bug
 labels: bug
 
