✨ Implemented nested plugin structure (#107)
resolves #106

--- a/PlugHub.Desktop/PlugHub.Desktop.csproj
+++ b/PlugHub.Desktop/PlugHub.Desktop.csproj
@@ -30,10 +30,10 @@
     <ProjectReference Include="..\PlugHub\PlugHub.csproj" />
   </ItemGroup>
 
-  
+
   <!-- Custom Official Plugin Handling -->
   <ItemGroup>
-    <Content Update="..\PlugHub.Plugins\PlugHub.Plugin.*">
+    <Content Update="..\PlugHub.Plugins\**\PlugHub.Plugin.*">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </Content>
   </ItemGroup>
@@ -46,11 +46,11 @@
   <Target Name="BuildReleasePlugins" BeforeTargets="PrepareForPublish" Condition="'$(IsPublishing)' == 'true'">
     <Message Text="Building Release plugin projects..." Importance="high" />
     <ItemGroup>
-      <PluginSharedProjects Include="..\PlugHub.Plugins\PlugHub.Shared.*\*.csproj" />
+      <PluginSharedProjects Include="..\PlugHub.Plugins\**\PlugHub.Shared.*\*.csproj" />
     </ItemGroup>
     <MSBuild Projects="@(PluginSharedProjects)" Targets="Build" Properties="Configuration=Release;Restore=true" />
     <ItemGroup>
-      <PluginImplProjects Include="..\PlugHub.Plugins\PlugHub.Plugin.*\*.csproj" />
+      <PluginImplProjects Include="..\PlugHub.Plugins\**\PlugHub.Plugin.*\*.csproj" />
     </ItemGroup>
     <MSBuild Projects="@(PluginImplProjects)" Targets="Build" Properties="Configuration=Release;Restore=true" />
   </Target>
@@ -58,11 +58,11 @@
   <Target Name="CopyPluginArtifactsOnPublish" AfterTargets="Publish" DependsOnTargets="BuildReleasePlugins" Condition="'$(IsPublishing)' == 'true'">
     <Message Text="Copying plugin artifacts to publish output..." Importance="high" />
     <ItemGroup>
-      <PluginArtifactsRaw Include="..\PlugHub.Plugins\PlugHub.Plugin.*\bin\Release\net8.0\**\*" Exclude="..\PlugHub.Plugins\PlugHub.Plugin.*\bin\Release\net8.0\**\PlugHub.Shared.dll;&#xD;&#xA;                                   ..\PlugHub.Plugins\PlugHub.Plugin.*\bin\Release\net8.0\**\PlugHub.Shared.pdb" />
+      <PluginArtifactsRaw Include="..\PlugHub.Plugins\**\PlugHub.Plugin.*\bin\Release\net8.0\**\*" Exclude="..\PlugHub.Plugins\**\PlugHub.Plugin.*\bin\Release\net8.0\**\PlugHub.Shared.dll;..\PlugHub.Plugins\**\PlugHub.Plugin.*\bin\Release\net8.0\**\PlugHub.Shared.pdb" />
     </ItemGroup>
     <ItemGroup>
       <PluginArtifacts Include="@(PluginArtifactsRaw)">
-        <PluginName>$([System.Text.RegularExpressions.Regex]::Match('%(PluginArtifactsRaw.Identity)', 'PlugHub\.Plugins\\([^\\]+)').Groups[1].Value)</PluginName>
+        <PluginName>$([System.Text.RegularExpressions.Regex]::Match('%(PluginArtifactsRaw.Identity)', 'PlugHub\.Plugins[\\/](.+?)[\\/]bin').Groups[1].Value)</PluginName>
       </PluginArtifacts>
     </ItemGroup>
     <Copy SourceFiles="@(PluginArtifacts)" DestinationFiles="@(PluginArtifacts->'$(PublishDir)Plugins\%(PluginName)\%(Filename)%(Extension)')" SkipUnchangedFiles="true" />
@@ -71,11 +71,11 @@
   <Target Name="BuildConfigurationPlugins" BeforeTargets="PrepareForBuild" Condition="'$(IsPublishing)' == 'false'">
     <Message Text="Building $(Configuration) plugin projects..." Importance="high" />
     <ItemGroup>
-      <PluginSharedProjects Include="..\PlugHub.Plugins\PlugHub.Shared.*\*.csproj" />
+      <PluginSharedProjects Include="..\PlugHub.Plugins\**\PlugHub.Shared.*\*.csproj" />
     </ItemGroup>
     <MSBuild Projects="@(PluginSharedProjects)" Targets="Build" Properties="Configuration=$(Configuration);Restore=true" />
     <ItemGroup>
-      <PluginImplProjects Include="..\PlugHub.Plugins\PlugHub.Plugin.*\*.csproj" />
+      <PluginImplProjects Include="..\PlugHub.Plugins\**\PlugHub.Plugin.*\*.csproj" />
     </ItemGroup>
     <MSBuild Projects="@(PluginImplProjects)" Targets="Build" Properties="Configuration=$(Configuration);Restore=true" />
   </Target>
@@ -83,11 +83,11 @@
   <Target Name="CopyPluginArtifactsOnBuild" AfterTargets="Build" DependsOnTargets="BuildConfigurationPlugins" Condition="'$(IsPublishing)' == 'false'">
     <Message Text="Copying plugin artifacts to build output..." Importance="high" />
     <ItemGroup>
-      <PluginArtifactsRaw Include="..\PlugHub.Plugins\PlugHub.Plugin.*\bin\$(Configuration)\**\*" Exclude="..\PlugHub.Plugins\PlugHub.Plugin.*\bin\$(Configuration)\**\PlugHub.Shared.dll;&#xD;&#xA;                 ..\PlugHub.Plugins\PlugHub.Plugin.*\bin\$(Configuration)\**\PlugHub.Shared.pdb" />
+      <PluginArtifactsRaw Include="..\PlugHub.Plugins\**\PlugHub.Plugin.*\bin\$(Configuration)\**\*" Exclude="..\PlugHub.Plugins\**\PlugHub.Plugin.*\bin\$(Configuration)\**\PlugHub.Shared.dll;..\PlugHub.Plugins\**\PlugHub.Plugin.*\bin\$(Configuration)\**\PlugHub.Shared.pdb" />
     </ItemGroup>
     <ItemGroup>
       <PluginArtifacts Include="@(PluginArtifactsRaw)">
-        <PluginName>$([System.Text.RegularExpressions.Regex]::Match('%(PluginArtifactsRaw.Identity)', 'PlugHub\.Plugins\\([^\\]+)').Groups[1].Value)</PluginName>
+        <PluginName>$([System.Text.RegularExpressions.Regex]::Match('%(PluginArtifactsRaw.Identity)', 'PlugHub\.Plugins[\\/](.+?)[\\/]bin').Groups[1].Value)</PluginName>
       </PluginArtifacts>
     </ItemGroup>
     <Copy SourceFiles="@(PluginArtifacts)" DestinationFiles="@(PluginArtifacts->'$(OutputPath)Plugins\%(PluginName)\%(Filename)%(Extension)')" SkipUnchangedFiles="true" />
