--- a/PlugHub.Plugins/Diagnostics/PlugHub.Shared.Mock/PlugHub.Shared.Mock.csproj
+++ b/PlugHub.Plugins/Diagnostics/PlugHub.Shared.Mock/PlugHub.Shared.Mock.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\PlugHub.Shared\PlugHub.Shared.csproj" />
+    <ProjectReference Include="..\..\..\PlugHub.Shared\PlugHub.Shared.csproj" />
   </ItemGroup>
 
 </Project>
