--- a/PlugHub.Plugins/Diagnostics/PlugHub.Plugin.Mock/PlugHub.Plugin.Mock.csproj
+++ b/PlugHub.Plugins/Diagnostics/PlugHub.Plugin.Mock/PlugHub.Plugin.Mock.csproj
@@ -43,7 +43,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\..\PlugHub.Shared\PlugHub.Shared.csproj" />
+    <ProjectReference Include="..\..\..\PlugHub.Shared\PlugHub.Shared.csproj" />
     <ProjectReference Include="..\PlugHub.Shared.Mock\PlugHub.Shared.Mock.csproj" />
   </ItemGroup>
 
