--- a/PlugHub.UnitTests/PlugHub.UnitTests.csproj
+++ b/PlugHub.UnitTests/PlugHub.UnitTests.csproj
@@ -15,6 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PlugHub.Plugins\Diagnostics\PlugHub.Plugin.Mock\PlugHub.Plugin.Mock.csproj" />
     <ProjectReference Include="..\PlugHub.Plugins\Diagnostics\PlugHub.Shared.Mock\PlugHub.Shared.Mock.csproj" />
     <ProjectReference Include="..\PlugHub\PlugHub.csproj" />
     <ProjectReference Include="..\PlugHub.Shared\PlugHub.Shared.csproj" />
