--- a/PlugHub.Plugins/Diagnostics/PlugHub.Plugin.Mock/PlugHub.Plugin.Mock.csproj
+++ b/PlugHub.Plugins/Diagnostics/PlugHub.Plugin.Mock/PlugHub.Plugin.Mock.csproj
@@ -1,50 +1,32 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <RuntimeIdentifiers>win-x64;linux-x64;osx-x64</RuntimeIdentifiers>
-    <AvaloniaUseCompiledBindingsByDefault>false</AvaloniaUseCompiledBindingsByDefault>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<RuntimeIdentifiers>win-x64;linux-x64;osx-x64</RuntimeIdentifiers>
+		<AvaloniaUseCompiledBindingsByDefault>false</AvaloniaUseCompiledBindingsByDefault>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <!--Avalonia-->
-    <PackageReference Include="Avalonia" Version="11.3.2" />
-    <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.2" />
-    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.2" />
-    <!--Avalonia Extras-->
-    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-    <PackageReference Include="FluentAvaloniaUI" Version="2.4.0" />
-    <!--Avalonia Behaviors-->
-    <PackageReference Include="Xaml.Behaviors.Avalonia" Version="11.3.2" />
-    <PackageReference Include="Xaml.Behaviors.Interactivity" Version="11.3.2" />
-    <!--Dependency Injection-->
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.7" />
-    <!--Configuration-->
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.7" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="9.0.7" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.7" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.7" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.7" />
-    <!--Logging-->
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.7" />
-    <PackageReference Include="Serilog" Version="4.3.0" />
-    <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.2" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
-    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
-  </ItemGroup>  
+	<ItemGroup>
+		<!--Avalonia-->
+		<PackageReference Include="Avalonia" Version="11.3.2" />
+		<!--Avalonia Extras-->
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+		<PackageReference Include="FluentAvaloniaUI" Version="2.4.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <AvaloniaResource Include="Assets\ic_fluent_chat_24_regular.png" />
-    <AvaloniaResource Include="Assets\ic_fluent_link_24_filled.png" />
-    <AvaloniaResource Include="Assets\ic_fluent_link_dismiss_24_filled.png" />
-    <AvaloniaResource Include="Styles\Icons.axaml" />
-  </ItemGroup>
-  
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\PlugHub.Shared\PlugHub.Shared.csproj" />
-    <ProjectReference Include="..\PlugHub.Shared.Mock\PlugHub.Shared.Mock.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<AvaloniaResource Include="Assets\ic_fluent_chat_24_regular.png" />
+		<AvaloniaResource Include="Assets\ic_fluent_link_24_filled.png" />
+		<AvaloniaResource Include="Assets\ic_fluent_link_dismiss_24_filled.png" />
+		<AvaloniaResource Include="Assets\alien-bob.png" />
+		<AvaloniaResource Include="Styles\Icons.axaml" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\..\..\PlugHub.Shared\PlugHub.Shared.csproj" />
+		<ProjectReference Include="..\PlugHub.Shared.Mock\PlugHub.Shared.Mock.csproj" />
+	</ItemGroup>
 
 </Project>
