🧼 Cleaning up naming.  We'll see.

--- a/PlugHub.Plugins/Controls/PlugHub.Plugin.DockHost/PlugHub.Plugin.DockHost.csproj
+++ b/PlugHub.Plugins/Controls/PlugHub.Plugin.DockHost/PlugHub.Plugin.DockHost.csproj
@@ -8,6 +8,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<AvaloniaResource Include="Assets\**" />
+		<AvaloniaResource Include="Themes\**\*.axaml" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<!--Avalonia-->
 		<PackageReference Include="Avalonia" Version="11.3.2" />
 		<!--Avalonia Extras-->
@@ -15,24 +20,6 @@
 		<!--Avalonia Behaviors-->
 		<PackageReference Include="Xaml.Behaviors.Avalonia" Version="11.3.2" />
 		<PackageReference Include="Xaml.Behaviors.Interactivity" Version="11.3.2" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<Compile Update="Views\DockControlDemoView.axaml.cs">
-			<DependentUpon>DockControlDemoView.axaml</DependentUpon>
-		</Compile>
-		<Compile Update="Views\DockHostPanelCharacterView.axaml.cs">
-			<DependentUpon>DockHostPanelCharacterView.axaml</DependentUpon>
-		</Compile>
-		<Compile Update="Views\DockHostPanelFactionView.axaml.cs">
-			<DependentUpon>DockHostPanelFactionView.axaml</DependentUpon>
-		</Compile>
-		<Compile Update="Views\DockHostPanelQuestView.axaml.cs">
-			<DependentUpon>DockHostPanelQuestView.axaml</DependentUpon>
-		</Compile>
-		<Compile Update="Views\DockHostPanelWorldView.axaml.cs">
-			<DependentUpon>DockHostPanelWorldView.axaml</DependentUpon>
-		</Compile>
 	</ItemGroup>
 
 	<ItemGroup>
