--- a/PlugHub.Plugins/Controls/PlugHub.Plugin.Controls/PlugHub.Plugin.Controls.csproj
+++ b/PlugHub.Plugins/Controls/PlugHub.Plugin.Controls/PlugHub.Plugin.Controls.csproj
@@ -8,14 +8,15 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<AvaloniaResource Include="Assets\**" />
+		<AvaloniaResource Include="Themes\**\*.axaml" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<!--Avalonia-->
 		<PackageReference Include="Avalonia" Version="11.3.2" />
 		<!--Avalonia Extras-->
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<AvaloniaResource Include="Themes\**\*.axaml" />
 	</ItemGroup>
 
 	<ItemGroup>
